--- a/editor/templates/config.html
+++ b/editor/templates/config.html
@@ -15,10 +15,25 @@
     
     <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-all.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-other.css">
-    <link rel="stylesheet" type="text/css" href="/editor/static/css/UISegmentedControl.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/editor/static/css/UISegmentedControl.css"> -->
 
     <script src="/editor/static/js/jquery-1.7.2.js"></script>
+    <script src="static/js/bootstrap-2.0.3.js"></script>
     <style>
+        /* Styles for Tab states */
+        .TabPanels .tabPanel {
+            display: none;
+        }
+        .TabPanels .tabPanel.active {
+            display: block;
+        }
+        .tabPanel a {
+            color: #9FD4FF;
+        }
+        .tabpanel a:hover {
+            text-decoration: underline;
+        }
+        /* End Styles for Tab states */
     </style>
 </head>
 <body>
@@ -41,12 +56,7 @@
         </div>
     </div>
     <div class="container-fluid">
-        <div class=page>&nbsp;
-          {% for message in get_flashed_messages() %}
-            <div class=flash>{{ message }}</div>
-          {% endfor %}
-        </div>
-        
+        &nbsp;<br />
         <p>Some useful configuration info:</p>
         
         <pre style="background-color: #F5F5F5">
@@ -66,31 +76,36 @@
                 <p>(What this really does is to return the Git repository in /var/www to its last committed state.)</p></td>
             </div>
             <div class="span6">
-                <p>Choose editor:</p>
-                <div class="Tabs segmentedControlBase" style="width: 300px;">
-                    <input id="editor-cm" type="button" class="button segmentedControl selected" value="CodeMirror 2" />
-                    <input id="editor-a" type="button" class="button segmentedControl" value="Ace" />
-                </div>
-                <div class="TabPanels">
-                    <div id="editor-cm-desc" class="tabPanel selected">
-                        <p><a href="http://codemirror.net/" name="CodeMirror" title="CodeMirror" target="_editor">{} CodeMirror /* In-browser code editing made bearable */</a><br />
-                        CodeMirror is a JavaScript library that can be used to create a relatively
-                        pleasant editor interface for code-like content ― computer programs, HTML markup and similar.
-                        If a mode has been written for the language you are editing, the code will be coloured and
-                        the editor will optionally help you with indentation.<br />
-                        <a href="static/codemirror2/index.html" name="CodeMirror2" title="CodeMirror2" target="_editor">documentation</a>
-                        </p>
+                <div style="display: block">
+                    <p>Choose editor:</p>
+    
+                    <div class="btn-group" data-toggle="buttons-radio">
+                        <button id="editor-cm" class="btn btn-large btn-primary rascal" style="width: 180px">CodeMirror 2</button>
+                        <button id="editor-a" class="btn btn-large btn-primary rascal" style="width: 120px">Ace</button>
                     </div>
-                   <div id="editor-a-desc" class="tabPanel">
-                        <p><a href="http://ace.ajax.org/" name="Ace" title="Ace" target="_editor">Ajax.org Cloud9 Editor</a><br />
-                        Ace is a standalone code editor written in JavaScript.
-                        The goal is to create a web based code editor that matches and extends the features, usability and
-                        performance of existing native editors such as TextMate, Vim or Eclipse.
-                        Ace is developed as the primary editor for Cloud9 IDE and the successor of the Mozilla Skywriter (Bespin) Project.<br />
-                        <a href="https://github.com/ajaxorg/ace/wiki" name="Ace wiki" title="Ace wiki" target="_editor">wiki</a> |
-                        <a href="https://github.com/ajaxorg/ace/wiki/Default-Keyboard-Shortcuts" name="Keyboard shortcuts" title="keyboard shortcuts" target="_editor">keyboard shortcuts</a> |
-                        <a href="static/ace/build/kitchen-sink.html" name="kitchen sink demo" title="kitchen sink demo" target="_editor">kitchen sink demo</a>
-                        </p>
+                    <div class="TabPanels">
+                        <div id="editor-cm-desc" class="tabPanel active">
+                            <p><a href="http://codemirror.net/" name="CodeMirror" title="CodeMirror" target="_editor">{} CodeMirror /* In-browser code editing made bearable */</a><br />
+                            CodeMirror is a JavaScript library that can be used to create a relatively
+                            pleasant editor interface for code-like content ― computer programs, HTML markup and similar.
+                            If a mode has been written for the language you are editing, the code will be coloured and
+                            the editor will optionally help you with indentation.<br />
+                            <a href="static/codemirror2/index.html" name="CodeMirror2" title="CodeMirror2" target="_editor">documentation</a> |
+                            <a href="static/bootstrap/docs/index.html" name="bootstrap" title="Bootstrap" target="_editor">bootstrap docs</a>
+                            </p>
+                        </div>
+                       <div id="editor-a-desc" class="tabPanel">
+                            <p><a href="http://ace.ajax.org/" name="Ace" title="Ace" target="_editor">Ajax.org Cloud9 Editor</a><br />
+                            Ace is a standalone code editor written in JavaScript.
+                            The goal is to create a web based code editor that matches and extends the features, usability and
+                            performance of existing native editors such as TextMate, Vim or Eclipse.
+                            Ace is developed as the primary editor for Cloud9 IDE and the successor of the Mozilla Skywriter (Bespin) Project.<br />
+                            <a href="https://github.com/ajaxorg/ace/wiki" name="Ace wiki" title="Ace wiki" target="_editor">wiki</a> |
+                            <a href="https://github.com/ajaxorg/ace/wiki/Default-Keyboard-Shortcuts" name="Keyboard shortcuts" title="keyboard shortcuts" target="_editor">keyboard shortcuts</a> |
+                            <a href="static/ace/build/kitchen-sink.html" name="kitchen sink demo" title="kitchen sink demo" target="_editor">kitchen sink demo</a> |
+                            <a href="static/bootstrap/docs/index.html" name="bootstrap" title="Bootstrap" target="_editor">bootstrap docs</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>        
@@ -105,8 +120,8 @@
         });
         
         function selectEditor(editor) {
-            $('.segmentedControl, .tabPanel').removeClass('selected');
-            $('#' + editor + ', #' + editor + '-desc').addClass('selected');
+            $('.tabPanel').removeClass('active');
+            $('#' + editor + ', #' + editor + '-desc').addClass('active');
         }
         
         function setEditor (editor) {
@@ -118,10 +133,6 @@
 
         $('#editor-cm').click(function () {
             setEditor('editor-cm');
-        });
-
-        $('#editor-bs').click(function () {
-            setEditor('editor-bs');
         });
 
         $('#editor-a').click(function () {
