--- a/editor/templates/editor-a.html
+++ b/editor/templates/editor-a.html
@@ -19,8 +19,10 @@
 
     <script src="/editor/static/ace/build/src/ace-noconflict.js" type="text/javascript" charset="utf-8"></script>
     <script src="/editor/static/ace/build/src/theme-textmate-noconflict.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/editor/static/ace/build/src/theme-cobalt-noconflict.js" type="text/javascript" charset="utf-8"></script>
-    
+    <script src="/editor/static/ace/build/src/theme-solarized_light-noconflict.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/editor/static/ace/build/src/theme-solarized_dark-noconflict.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/editor/static/ace/build/src/theme-tomorrow_night_bright-noconflict.js" type="text/javascript" charset="utf-8"></script>
+
     <script src="/editor/static/ace/build/src/mode-css-noconflict.js" type="text/javascript" charset="utf-8"></script>
     <script src="/editor/static/ace/build/src/mode-html-noconflict.js" type="text/javascript" charset="utf-8"></script>
     <script src="/editor/static/ace/build/src/mode-javascript-noconflict.js" type="text/javascript" charset="utf-8"></script>
@@ -35,11 +37,12 @@
     
     <style>
         #ace-editor {
-            top:  3px;
-            left: 3px;
-            /* width: 908px; */
+            top:  0;
+            left: 0;
             width: 888px;
             height: 475px;
+            font-size: 12px;
+            line-height: 1.4em;
             background-color: white;
             border: 3px solid #424242;
             -moz-box-shadow: 0 0 3px #3A3A3A;
@@ -183,6 +186,103 @@
             <a id="delete-yes" href="#" class="btn btn-danger">Delete</a>
         </div>
     </div>
+    
+    <div id="modal-p" class="modal fade hide rascal">
+        <div class="modal-header">
+            <button class="close" data-dismiss="modal">×</button>
+            <h3>Ace Preferences</h3>
+        </div>
+        <div class="modal-body">
+            <form class="form-horizontal">
+                <fieldset>
+                    <div class="control-group rascal">
+                        <label class="control-label" for="theme">Theme</label>
+                        <div class="controls">
+                            <select id="theme" class="span3">
+                                <option value="textmate" selected="selected">TextMate</option>
+                                <option value="solarized_light">Solarized Light</option>
+                                <option value="solarized_dark">Solarized Dark</option>
+                                <option value="tomorrow_night_bright">Tomorrow Night Bright</option>
+                            </select>
+                        </div> <!-- controls -->
+                    </div> <!-- control-group -->
+                    <div class="control-group rascal">
+                        <label class="control-label" for="fontSize">Font size</label>
+                        <div class="controls">
+                            <input id="fontSize" type="number" value="12" min="9" max="72" class="span1" />
+                            <span class="help-inline rascal">9-72 px</span>
+                        </div> <!-- controls -->
+                    </div> <!-- control-group -->
+                    <div class="control-group rascal">
+                        <label class="control-label" for="lineHeight">Line height</label>
+                        <div class="controls">
+                            <input id="lineHeight" type="number" value="1.4" min="1.0" max="6.0" step="0.1" class="span1" />
+                            <span class="help-inline rascal">1.0-6.0 em</span>
+                        </div> <!-- controls -->
+                    </div> <!-- control-group -->
+                    <div class="control-group rascal">
+                        <label class="control-label" for="tabSize">Tab size</label>
+                        <div class="controls">
+                            <input id="tabSize" type="number" value="4" min="1" max="64" class="span1" />
+                            <span class="help-inline rascal">width of a tab character</span>
+                        </div> <!-- controls -->
+                    </div> <!-- control-group -->
+                    <div class="control-group rascal">
+                        <div class="controls">
+                            <label class="checkbox">
+                                <input id="softTabs" type="checkbox" name="softTabs" />Soft tabs
+                            </label>
+                            <label class="checkbox">
+                                <input id="visibleTabs" type="checkbox" name="visibleTabs" />Visible tabs
+                            </label>
+                        </div> <!-- controls -->
+                    </div> <!-- control-group -->
+                    <div class="control-group rascal">
+<!-- 
+                        <label class="control-label" for="indentUnit">Indent size</label>
+                        <div class="controls">
+                            <input id="indentUnit" type="number" value="2" min="0" max="64" class="span1" />
+                            <span class="help-inline rascal">additional spaces to indent a block</span>
+                        </div> <!~~ controls ~~>
+                    </div> <!~~ control-group ~~>
+ -->
+                     <div class="control-group rascal">
+                        <label class="control-label" for="wrapOff">Wrap lines</label>
+                        <div class="controls">
+                            <label class="radio inline">
+                                <input id="wrapOff" type="radio" name="wrapLines" value="0" checked="checked" />Off
+                            </label>
+                            <label class="radio inline">
+                                <input id="wrapOn" type="radio" name="wrapLines" value="1" />On
+                            </label>
+                            <label class="radio inline">
+                                <input id="wrap80" type="radio" name="wrapLines" value="2">At 80 characters
+                            </label>
+                        </div> <!-- controls -->
+                    </div> <!-- control-group -->
+                     <div class="control-group rascal">
+                        <label class="control-label" for="lineNumbers">Other options</label>
+                        <div class="controls">
+                            <label class="checkbox">
+                                <input id="lineNumbers" type="checkbox" name="lineNumbers" />Show line numbers
+                            </label>
+                            <label class="checkbox">
+                                <input id="matchBrackets" type="checkbox" name="matchBrackets" />Auto-pair brackets, quotes etc.
+                            </label>
+                            <label class="checkbox">
+                                <input id="highlightSelectedWord" type="checkbox" name="highlightSelectedWord" />Highlight selected word
+                            </label>
+                        </div> <!-- controls -->
+                    </div> <!-- control-group -->
+                </fieldset>
+            </form>
+        </div> <!-- /modal-body -->
+        <div class="modal-footer">
+            <a id="prefs-defaults" href="#" class="btn btn-warning">Restore Defaults</a>
+            <a id="prefs-cancel" href="#" class="btn">Cancel</a>
+            <a id="prefs-save" href="#" class="btn btn-danger">Save</a>
+        </div>
+    </div>
     <!-- /modal dialogues -->
 
     <script src="/editor/static/js/editor-resize.js"></script>
@@ -209,9 +309,9 @@
                 dh = (h > (637 + XH)) ? h - (637 + XH) : 0;
                 console.log('resize ' + dw + ' x ' + dh);
                //  $('.rascalcontent').width(1260 + dw);
-                $('#filetree').height(461 + dh);
+                $('#filetree').height(455 + dh);
                 $('#ace-editor').height(475 + dh);
-                 $('#ace-editor').width($('#textfield').width() - 8);
+                $('#ace-editor').width($('#textfield').width() - 6);
                 editor.resize();
                 if (rascal.picture.showing) {
                     $('#frame-p')
